bugs removed form fields made required

--- a/tut 4 model deploy/templates/index.html
+++ b/tut 4 model deploy/templates/index.html
@@ -8,7 +8,7 @@
 		<h1> Text Classification </h1>
 
 		<form method="POST" action="/">
-			<textarea name="text_box" rows="10" cols="70" placeholder="Enter text here..."></textarea> 
+			<textarea name="text_box" rows="10" cols="70" placeholder="Enter text here..." required></textarea> 
 			<br><br>
 			<input type="submit">
 		</form>
