--- a/tut 5 sending emails/templates/index.html
+++ b/tut 5 sending emails/templates/index.html
@@ -12,16 +12,16 @@
 		<fieldset>
 			<legend>E-mail</legend>
 		<label>From :</label>
-		<input type="email" name="from" placeholder="From"><br><br>
+		<input type="email" name="from" placeholder="From" required><br><br>
 		<label>To :</label>
-		<input type="email" name="to" placeholder="To"><br><br>
+		<input type="email" name="to" placeholder="To" required><br><br>
 		<label>Subject :</label>
 		<input type="text" name="subject" placeholder="Subject"><br><br>
 		
 		<textarea name="message" rows="10" cols="70" placeholder="Enter mail here..."></textarea><br><br>
 
 		<label>Password :</label>
-		<input type="password" name="password" placeholder="Password"><br><br>
+		<input type="password" name="password" placeholder="Password" required><br><br>
 		
 		<input type="submit">
 	</form></fieldset>
